<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="at.ums.luna.umslfs.actividades.FormularioTrabajador">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_del_trabajador"
        android:gravity="center_horizontal"/>

    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <AutoCompleteTextView
        android:id="@+id/tvIdTrabajador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_trabajador"
        android:maxLines="1"
        android:singleLine="true"
        android:maxLength="2"/>

</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/tvNombreTrabajador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_trabajador"
            android:maxLines="1"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/botonActualizarTrabajador"
        android:text="@string/actualizar"
        android:layout_gravity="center"/>


</LinearLayout>
