<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="at.ums.luna.umslfs.actividades.FormularioAlbaranesDetalle">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:id="@+id/tvCodigoAlbaran"
                android:text="JJ160000"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <AutoCompleteTextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:textSize="24dp"
                    android:hint="@string/linea"
                    android:id="@+id/linea"
                    android:text=""
                    android:editable="false"/>


            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <AutoCompleteTextView
                android:id="@+id/detalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/cantidad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/cantidad"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/tipo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/tipo"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonCancelarDetalle"
                android:text="@string/Cancelar"
                android:layout_gravity="center"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonBorrarDetalle"
                android:text="@string/borrar"
                android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonActualizarDetalle"
            android:text="@string/actualizar"
            android:layout_gravity="center"/>

    </LinearLayout>

</RelativeLayout>
