<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="at.ums.luna.umslfs.actividades.AlbaranesCabeceraFragment"
    android:tag="AlbaranCabeceraFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:id="@+id/tvCodigoAlbaran"
                android:text="JJ160000"
                android:textSize="24dp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <AutoCompleteTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/fecha"
                    android:id="@+id/tvFecha"
                    android:text=""/>


            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/widgetIdCliente">

                <AutoCompleteTextView
                    android:id="@+id/tvIdCliente"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="8"
                    android:hint="@string/id_cliente"
                    android:clickable="true"
                    android:editable="false"/>

            </android.support.design.widget.TextInputLayout>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButtonElegirCliente"
                android:src="@android:drawable/ic_menu_myplaces"/>

        </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/tvNombreCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/nombre_cliente"
            android:editable="false"/>

    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/tvDireccionCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/direccion_cliente"
            android:editable="false"/>

    </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonCancelarAlbaran"
                android:text="@string/Cancelar"
                android:layout_gravity="center"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/botonBorrarAlbaran"
                android:text="@string/borrar"
                android:layout_gravity="center"/>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonActualizarAlbaran"
            android:text="@string/actualizar"
            android:layout_gravity="center"/>


    </LinearLayout>


</FrameLayout>
