<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio.MainActivity"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/borde_imagen_dark"

        android:padding="8dp"
        android:elevation="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/tvTrabajador"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginRight="16dp"
            android:text="@string/textoUltimoAlbaran"
            android:id="@+id/tvMaxTumbatitulo"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/tvMaxAlbaran"
            android:layout_toStartOf="@+id/tvMaxAlbaran"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="100"
            android:id="@+id/tvMaxAlbaran"
            android:layout_alignTop="@+id/tvMaxTumbatitulo"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:id="@+id/scrollView">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:paddingRight="4dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/albaranes"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/borde_imagen_accent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:onClick="botonListaAlbaranes"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/botonClientes"
                    android:background="@drawable/borde_imagen_accent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:clickable="true"
                    android:onClick="botonListaClientes"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="----"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/borde_imagen_accent"
                    android:elevation="4dp"
                    android:gravity="center"/>



            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:paddingRight="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="----"
                    android:background="@drawable/borde_imagen_accent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="----"
                    android:background="@drawable/borde_imagen_accent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/datos_trabajador"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/borde_imagen_accent"
                    android:elevation="4dp"
                    android:gravity="center"
                    android:onClick="botonEditarTrabajador"/>



            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>

